Introduce off-heap memory for efficient trade analysis.
Replaced `ArrayList` with direct off-heap memory allocation using `MemorySegment` for storage of inter-trade deltas, improving memory efficiency and reducing GC overhead. Enhanced performance by leveraging Java's Vector API for optimized calculations and parallel sorting. Fixed handling of empty trade files and added reusable heap buffer for multiple iterations.