@@ -1,4 +1,4 @@
-package arrows;
+package arrow;
 
 
 
@@ -8,50 +8,29 @@ import jdk.incubator.vector.VectorSpecies;
 import org.apache.arrow.memory.RootAllocator;
 import org.apache.arrow.vector.BigIntVector;
 import org.apache.arrow.vector.VectorSchemaRoot;
-
 import org.apache.arrow.vector.ipc.ArrowFileReader;
 import org.apache.arrow.vector.ipc.ArrowStreamReader;
 
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.io.RandomAccessFile;
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.ValueLayout;
 import java.nio.ByteOrder;
 import java.nio.channels.FileChannel;
-import java.util.ArrayList;
+import java.nio.file.StandardOpenOption;
 import java.util.Arrays;
-import java.util.List;
 
-/**
- * A utility class to read and analyze trade data from an Arrow stream file (.arrows) using:
- * 1. Off-Heap Memory Access (Project Panama/Foreign Memory)
- * 2. SIMD Vector Instructions (Vector API)
- * for improved performance.
- * NOTE: This class uses incubator features. The code must be compiled and run with:
- * --add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED
- */
-public class ArrowsOffHeap {
+public class ArrowOffHeap {
 
     private static final VectorSpecies<Long> SPECIES = LongVector.SPECIES_PREFERRED;
     private static final ByteOrder ARROW_ORDER = ByteOrder.LITTLE_ENDIAN;
 
-
     /**
-     * Analyzes an Arrow stream file to calculate the CDF of inter-trade arrival times.
-     *
-     * @param arrowFilePath The path to the Arrow stream file.
+     * Analyzes an Arrow stream file using a reusable buffer to minimize GC.
      */
-
-
-    /**
-     * Analyzes an Arrow stream file to calculate the CDF of inter-trade arrival times.
-     *
-     * @param arrowFilePath The path to the Arrow stream file.
-     */
-    public static void analyzeTrades(String arrowFilePath) {
+    public static void analyzeTrades(String arrowFilePath, long[] reusableBuffer) {
         long totalStartTime = System.nanoTime();
 
         File arrowFile = new File(arrowFilePath);
@@ -60,7 +39,6 @@ public class ArrowsOffHeap {
             return;
         }
 
-        // ... [Timer variables declarations omitted for brevity] ...
         long setupEndTime;
         long readingStartTime;
         long readingEndTime;
@@ -73,22 +51,21 @@ public class ArrowsOffHeap {
         long totalSegmentSetupNanos = 0;
         long totalVectorCalcNanos = 0;
 
-
         try (Arena arena = Arena.ofConfined()) {
-            long maxTrades = 100_000_000;
-            MemorySegment arrivalTimeDeltasMS = arena.allocate(maxTrades * 8L, 8);
-            long writeOffset = 0; // Tracks our position in the off-heap memory
+            // Ensure our off-heap buffer matches the size of our reusable heap buffer
+            long maxTradesBytes = (long) reusableBuffer.length * 8L;
+            MemorySegment arrivalTimeDeltasMS = arena.allocate(maxTradesBytes, 8);
+
+            long writeOffset = 0; // Tracks bytes written
 
             try (RootAllocator allocator = new RootAllocator()) {
-                try (FileInputStream fileInputStream = new FileInputStream(arrowFile);
-                     ArrowStreamReader reader = new ArrowStreamReader(fileInputStream, allocator)) {
+                try (FileChannel fileChannel = FileChannel.open(arrowFile.toPath(), StandardOpenOption.READ);
+                     ArrowFileReader reader = new ArrowFileReader(fileChannel, allocator))
+                {
 
                     System.out.println("Successfully opened Arrow stream file: " + arrowFilePath);
                     VectorSchemaRoot root = reader.getVectorSchemaRoot();
                     setupEndTime = System.nanoTime();
-
-                    // --- CHANGE START: ArrayList removed ---
-                    // List<Long> arrivalTimeDeltas = new ArrayList<>(); // REMOVED
 
                     long lastTimestamp = -1;
                     long totalTrades = 0;
@@ -107,25 +84,24 @@ public class ArrowsOffHeap {
 
                         t1 = System.nanoTime();
                         // Create segment from buffer
-                        java.nio.ByteBuffer byteBuffer = timestampVector.getDataBuffer().nioBuffer(0,  batchSize * Long.BYTES);
+                        java.nio.ByteBuffer byteBuffer = timestampVector.getDataBuffer().nioBuffer(0, batchSize * Long.BYTES);
                         MemorySegment segment = MemorySegment.ofBuffer(byteBuffer);
                         t2 = System.nanoTime();
                         totalSegmentSetupNanos += (t2 - t1);
 
                         t1 = System.nanoTime();
 
-                        // --- CHANGE LOGIC: Write boundary delta directly to off-heap memory ---
+                        // 1. Boundary Logic
                         if (lastTimestamp != -1) {
                             long firstTimestamp = segment.get(ValueLayout.JAVA_LONG.withOrder(ARROW_ORDER), 0);
                             long boundaryDelta = firstTimestamp - lastTimestamp;
-
-                            // Write directly to segment instead of adding to ArrayList
                             arrivalTimeDeltasMS.set(ValueLayout.JAVA_LONG_UNALIGNED, writeOffset, boundaryDelta);
                             writeOffset += 8L;
                         }
 
                         int i = 1;
-                        // Main Vector Loop
+
+                        // 2. Vector Loop (Using Shuffle as requested)
                         for (; i <= batchSize - SPECIES.length(); i += SPECIES.length()) {
                             LongVector current = LongVector.fromMemorySegment(SPECIES, segment, (long) i * Long.BYTES, ARROW_ORDER);
                             VectorShuffle<Long> slide = VectorShuffle.iota(SPECIES, 1, 1, true);
@@ -136,7 +112,7 @@ public class ArrowsOffHeap {
                             writeOffset += SPECIES.length() * 8L;
                         }
 
-                        // Tail Loop
+                        // 3. Tail Loop
                         for (; i < batchSize; i++) {
                             long current = segment.get(ValueLayout.JAVA_LONG.withOrder(ARROW_ORDER), (long) i * Long.BYTES);
                             long previous = segment.get(ValueLayout.JAVA_LONG.withOrder(ARROW_ORDER), (long) (i - 1) * Long.BYTES);
@@ -152,8 +128,6 @@ public class ArrowsOffHeap {
                     }
                     readingEndTime = System.nanoTime();
 
-                    // --- CHANGE END ---
-
                     System.out.println("Finished reading " + totalTrades + " trades.");
 
                     if (writeOffset == 0) {
@@ -161,20 +135,31 @@ public class ArrowsOffHeap {
                         return;
                     }
 
+                    // --- IMPROVEMENT START: Reusing Heap Array ---
+
                     conversionStartTime = System.nanoTime();
 
-                    // Now extracting the array contains ALL deltas (boundary + vector calculated)
-                    long[] deltasArray = arrivalTimeDeltasMS.asSlice(0, writeOffset).toArray(ValueLayout.JAVA_LONG_UNALIGNED);
+                    // 1. Wrap the reusable long[] in a MemorySegment
+                    MemorySegment heapSegment = MemorySegment.ofArray(reusableBuffer);
+
+                    // 2. Bulk copy from Off-Heap (arrivalTimeDeltasMS) to On-Heap (reusableBuffer)
+                    //    We only copy exactly the number of bytes we wrote.
+                    MemorySegment.copy(arrivalTimeDeltasMS, 0, heapSegment, 0, writeOffset);
+
+                    int validCount = (int) (writeOffset / 8);
 
                     conversionEndTime = System.nanoTime();
 
                     sortStartTime = System.nanoTime();
-                    Arrays.parallelSort(deltasArray);
+                    // 3. Sort ONLY the valid portion of the array (from 0 to validCount)
+                    Arrays.parallelSort(reusableBuffer, 0, validCount);
                     sortEndTime = System.nanoTime();
+
+                    // --- IMPROVEMENT END ---
 
                     totalEndTime = System.nanoTime();
 
-                    printCdfSummary(deltasArray);
+                    printCdfSummary(reusableBuffer, validCount);
                     printPerformanceSummary(totalStartTime, setupEndTime, readingStartTime, readingEndTime, conversionStartTime, conversionEndTime, sortStartTime, sortEndTime, totalEndTime, totalBatchLoadNanos, totalSegmentSetupNanos, totalVectorCalcNanos);
 
                 }
@@ -187,17 +172,17 @@ public class ArrowsOffHeap {
         }
     }
 
-
-
-    private static void printCdfSummary(long[] sortedDeltas) {
+    // Updated to accept 'count' so we ignore the trailing zeros in the large buffer
+    private static void printCdfSummary(long[] sortedDeltas, int count) {
         System.out.println("Analysis Results: Inter-Trade Arrival Time CDF");
-        System.out.printf("Total calculated time differences: %,d%n", sortedDeltas.length);
+        System.out.printf("Total calculated time differences: %,d%n", count);
 
         double[] percentiles = {0.25, 0.50, 0.75, 0.90, 0.95, 0.99, 0.999, 1.00};
 
         System.out.println("Percentiles (time in milliseconds):");
         for (double percentile : percentiles) {
-            int index = (int) Math.min(Math.floor(percentile * sortedDeltas.length), sortedDeltas.length - 1);
+            // Calculate index based on 'count', not array.length
+            int index = (int) Math.min(Math.floor(percentile * count), count - 1);
             long value = sortedDeltas[index];
             System.out.printf("  - %.1fth percentile (%.2f): <= %d ms%n", percentile * 100, percentile, value);
         }
@@ -214,14 +199,13 @@ public class ArrowsOffHeap {
         double segmentSetupMillis = totalSegmentSetupNanos / 1_000_000.0;
         double vectorCalcMillis = totalVectorCalcNanos / 1_000_000.0;
 
-
         System.out.println("Performance Breakdown:");
         System.out.printf("  - Setup & Initialization:      %.3f ms%n", setupDuration);
         System.out.printf("  - Reading & Delta Calculation: %.3f ms%n", readingDuration);
         System.out.printf("    - I/O (Loading Batches):     %.3f ms%n", batchLoadMillis);
         System.out.printf("    - Off-Heap Segment Setup:    %.3f ms%n", segmentSetupMillis);
         System.out.printf("    - Vector API Delta Calc:     %.3f ms%n", vectorCalcMillis);
-        System.out.printf("  - List to Array Conversion:    %.3f ms%n", conversionDuration);
+        System.out.printf("  - Off-Heap to Heap Copy:       %.3f ms%n", conversionDuration); // Renamed label
         System.out.printf("  - Parallel Sort:               %.3f ms%n", sortDuration);
         System.out.println("-----------------------------------------");
         System.out.printf("Total time to read and compute CDF: %.3f milliseconds%n", totalDuration);
@@ -239,15 +223,19 @@ public class ArrowsOffHeap {
     }
 
     public static void main(String[] args) {
-        String arrowsFile ;
-        arrowsFile = "data/cboe/normalized/EDF_OUTPUT_NY_20251205.threesixtyt.lob.arrows";
+        String arrowsFile = "data/cboe/normalized/EDF_OUTPUT_NY_20251205.threesixtyt.lob.clickhouse.nocompression.arrow";
         int iterations = 10;
+
+        // --- IMPROVEMENT: Allocate once, outside the loop ---
+        // 100 Million trades buffer (approx 800MB heap usage)
+        System.out.println("Allocating reusable heap buffer...");
+        long[] reusableBuffer = new long[100_000_000];
+
         System.out.println("Running " + iterations + " iterations to measure performance...");
         for (int i = 0; i < iterations; i++) {
             System.out.println("\n--- Iteration " + (i + 1) + " ---");
-            analyzeTrades(arrowsFile);
+            // Pass the buffer into the method
+            analyzeTrades(arrowsFile, reusableBuffer);
         }
     }
 }
-
-
